--- a/css/chart.css
+++ b/css/chart.css
@@ -1,10 +1,14 @@
 
 .chart-div {
     position:relative;
-    width:80vw;
-    height:50vh;
+    width:80%;
+    height:50%;
+    margin:0 auto
 }
 #chart {
     width:8rem;
     height:8rem;
+}
+canvas {
+    /*background: var(--color-dark);*/
 }
