--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,19 @@ body {
     box-sizing: border-box;
 
 }
+#main {
+    padding:2rem;
+    /*background: var(--color-dark);*/
+    background: whitesmoke;
+
+}
+.main-header {
+
+}
+
+
+.map-div {
+    width:100%;
+    height:50vh;
+    background: url('../assets/images/world1.png') no-repeat center center/cover;
+}
