--- a/css/utility.css
+++ b/css/utility.css
@@ -1,3 +1,35 @@
 :root{
+    --color-dark:#2E2E2E;
+    --color-dark2:#232323;
+    --color-white:#ffffff;
+}
 
+
+.hide {
+    display: none;
+    background: none;
+    visibility: hidden;
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.regions-buttons-div button{
+
+    margin-left:1rem;
+}
+
+.category-buttons-div {
+    width:100%;
+    height:100%;
+    display:none;
+
+}
+.category-button {
+    margin-top:1rem;
+    margin-left:1rem;
+    justify-content: space-evenly;
 }
