--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,26 @@ body {
 
 }
 
-
 .map-div {
+    overflow: hidden;
     width:100%;
     height:50vh;
+    transition: 4s ease-in;
+}
+
+.map{
+    width:100%;
+    height:100%;
+   transition: 2s ease-in;
     background: url('../assets/images/world1.png') no-repeat center center/cover;
+}
+
+.zoom-map {
+    transform: scale(2);
+    opacity: 0;
+}
+.hide-map {
+
+    display: none;
+
 }
