--- a/css/style.css
+++ b/css/style.css
@@ -19,25 +19,28 @@ body {
 }
 
 .map-div {
+    position: absolute;
     overflow: hidden;
     width:100%;
     height:50vh;
-    transition: 4s ease-in;
+    transition: 2s ease-in;
+    z-index: 100;
 }
 
 .map{
     width:100%;
     height:100%;
-   transition: 2s ease-in;
+    transition: 4s ease-in;
     background: url('../assets/images/world1.png') no-repeat center center/cover;
 }
 
 .zoom-map {
     transform: scale(2);
     opacity: 0;
+
 }
 .hide-map {
-
-    display: none;
+    /*display: none;*/
+    opacity: 0;
 
 }
