--- a/css/utility.css
+++ b/css/utility.css
@@ -16,6 +16,12 @@
     justify-content: center;
     align-items: center;
 }
+.chart-type-buttons-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
 
 .regions-buttons-div button{
 
@@ -34,6 +40,9 @@
     justify-content: space-evenly;
     box-shadow: 1px 1px  20px rgba(128, 128, 128, 0.67);
 
+}
+.buttons-div{
+    margin-top:2rem;
 }
 
 button {
@@ -65,4 +74,39 @@ button:focus {
     background: rgba(243, 243, 91, 0.16);
     outline: none;
     border:grey solid 1px;
+}
+
+.loader-spinner {
+    opacity: 0;
+    display: none;
+    width:10vw;
+    height:10vh;
+    position: absolute;
+    top:50%;
+    left:50%;
+    border: solid transparent 5px;
+    border-top:solid #4545da 5px;
+    border-radius:50%;
+    transform: rotate(0);
+    animation: loading-animation 1000ms 500ms infinite forwards ease-in-out;
+}
+
+.activate-spinner{
+    display: block;
+}
+
+@keyframes loading-animation {
+    /*20% {*/
+    /*    transform: rotate(50deg);*/
+    /*}*/
+    /*50% {*/
+    /*    transform: rotate(100deg);*/
+    /*}*/
+    /*80% {*/
+    /*    transform: rotate(180deg);*/
+    /*}*/
+    0% {
+        opacity: 1;
+        transform: rotate(720deg);
+    }
 }
