--- a/css/utility.css
+++ b/css/utility.css
@@ -89,6 +89,7 @@ button:focus {
     border-radius:50%;
     transform: rotate(0);
     animation: loading-animation 1000ms 500ms infinite forwards ease-in-out;
+    background: url("../assets/images/corona_icon1.png") no-repeat center center/cover;
 }
 
 .activate-spinner{
