--- a/css/utility.css
+++ b/css/utility.css
@@ -19,7 +19,10 @@
 .chart-type-buttons-div {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
+    flex-direction: column;
+    position: absolute;
+    left:2rem
 
 }
 
