--- a/css/chart.css
+++ b/css/chart.css
@@ -1,15 +1,19 @@
 
 .chart-div {
     position:relative;
-    width:80%;
-    height:50%;
+
+    width:90%;
+   height:70vh;
     margin:0 auto
 }
 #chart {
-    width:8rem;
-    height:8rem;
+    margin-top:2rem;
+    width:100%;
+    height:100% ;
+    min-height:30rem;
+
 }
 canvas {
     /*background: var(--color-dark);*/
-    margin-top:2rem;
+
 }
