--- a/css/mobile.css
+++ b/css/mobile.css
@@ -7,3 +7,11 @@ button {
 .countries-buttons {
 
 }
+
+
+.country-info {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left:5%;
+    font-size: 0.8rem;
+}
