--- a/css/utility.css
+++ b/css/utility.css
@@ -2,7 +2,7 @@
     --color-dark:#2E2E2E;
     --color-dark2:#232323;
     --color-white:#ffffff;
-    --color-blue:#5b5ba2;
+    --color-blue: #5d5de1;
 }
 
 
