--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,29 @@
 #footer {
     padding:1rem;
-
     height:10rem;
     background: var(--color-dark2);
     color:var(--color-white);
+    font-weight: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 1px 1px 20px grey;
+}
+
+#footer h4{
+    font-size: 1rem;
+    color:var(--color-blue2);
+    text-decoration: underline;
+}
+#footer p{
+    font-size: 1rem;
+    margin: 0.5rem;
+}
 
 
+#footer a{
+    display: block;
+    text-decoration: none;
+    color:var(--color-blue2)
 }
