--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
     justify-content: space-around;
 }
 .country-info p{
-    color: #4dd7da;
+    color: var(--color-blue2);
 
    font-weight: 100;
     letter-spacing: 1px;
@@ -57,6 +57,7 @@ body {
     height:50vh;
     transition: 2s ease-in;
     z-index: 100;
+
 }
 
 .map{
@@ -64,6 +65,7 @@ body {
     height:100%;
     transition: 4s ease-in;
     background: url('../assets/images/world1.png') no-repeat center center/cover;
+    /*box-shadow: 1px 1px 20px grey;*/
 }
 
 .zoom-map {
