--- a/css/chart.css
+++ b/css/chart.css
@@ -4,12 +4,13 @@
 
     width:90%;
    height:70vh;
+    min-height:100px;
     margin:0 auto
 }
 #chart {
     margin-top:2rem;
     width:100%;
     height:100% ;
-    min-height:30rem;
+
 
 }
